<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kuryotech.coffeeshop.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name"
        android:hint="@string/label_nama"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_toppings"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_whipped_cream"
        android:id="@+id/chk_whipped_cream"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_chocolate"
        android:id="@+id/chk_chocolate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_quantity"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/width_48"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/btn_plus"/>
        <TextView
            android:layout_width="@dimen/width_48"
            android:layout_height="wrap_content"
            android:text="0"
            android:id="@+id/txt_quantity"
            android:gravity="center"/>
        <Button
            android:layout_width="@dimen/width_48"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/btn_minus"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your order"
        android:id="@+id/txt_show_order"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_order"
        android:onClick="showTotal"/>
</LinearLayout>
